--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
     <title> {% block title %}Soma{% endblock title %}</title>
 
     <link rel="stylesheet" href = "{% static "styles.css" %}">
+    <link rel="stylesheet" href = "{% static "courses.css" %}">
     <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
